# umalat

./: .gitignore  .pre-commit-config.yaml  1.csv  Dockerfile  Dockerfile.old  Dockerfile.prod  Dockerfile.test  Pipfile  README.md  Untitled.ipynb  YANDEX-DISK-KEY.GPG  boiling.csv  config.py  configure_pre_commit.sh  conftest.py  data.sqlite  debug.py  docker-compose-test.yaml  docker-compose.yaml  fill_db.py  init_db.bat  init_db.sh  manage.py  manage2.py  manage_test.py  pyproject.toml  pytest.ini  requirements.txt  requirements_apple_silicon.txt  runserver.py  script_profile.html  script_profile2.html  server_build.sh  server_build_fast.sh  test_imports.py
app/: __init__.py  app.py  create_app.py  create_external_db.py  create_manager.py  db.py  enum.py  file_header.py  fill_db.py  globals.py  init.py  interactive_imports.py  models.py  models_new.py  notifier.py
app/data/: data.json  params.xlsx  params_1020.xlsx
app/enum/: department_name.py  line_name.py
app/imports/: external.py  runtime.py  utils.py
app/main/: __init__.py  batch.py  boiling.py  boiling_form_factor.py  boiling_plan.py  boiling_plan_fast.py  download.py  errors.py  form_factor.py  forms.py  generate_boiling_plan.py  generate_constructor.py  generate_csv.py  generate_sku_plan.py  index.py  login.py  parse_request.py  pouring.py  schedule.py  sku.py  sku_plan.py  sku_plan_stats.py  test.py  time_validator.py  validators.py  views.py
app/models/: __init__.py  adygea.py  basic.py  brynza.py  butter.py  cream_cheese.py  default_data.py  halumi.py  helpers.py  mascarpone.py  milk_project.py  models_ricotta.py  mozzarella.py  ricotta.py  test_helpers.py
app/schedule_maker/: __init__.py  algo.py  blocks.py  boiling_plan.py  boiling_plan_df.py  boiling_plan_df_test.py  boiling_plan_test.py  calculation.py  dataframes.py  dataframes_test.py  drawing.py  frontend.py  main_test.py  models.py  models_test.py  style.py  time.py  validation.py
app/scheduler/: __init__.py  boiling_plan.py  boiling_plan_like.py  consolidated_schedule.py  consolidated_schedule_old.py  drawing.py  frontend.py  frontend_utils.py  header.py  load_properties.py  load_schedules.py  parsing.py  run_consolidated.py  run_consolidated_old.py  scheduler.py  shifts.py  submit.py  submit_schedule.py  time.py  time_utils.py  update_absolute_batch_id.py  wrap_header.py
app/static/: main.js
app/templates/: 403.html  404.html  500.html  _cheese_makers.html  _cheeses.html  add_boiling.html  add_cheese.html  add_cheese_maker.html  add_form_factor.html  add_pouring_process.html  add_sku.html  base-fullscreen.html  base.html  boiling_plan.html  boiling_plan_fast.html  boiling_plan_full.html  cheese_makers.html  cheese_scheduler.html  cheeses.html  download_schedules.html  edit_boiling.html  edit_boiling_form_factor.html  edit_cheese.html  edit_pouring_process.html  edit_sku.html  generate_constructor.html  get_boiling.html  get_boiling_form_factor.html  get_form_factor.html  get_general_params.html  get_pouring_process.html  get_sku.html  index.html  login.html  mozzarella_params.html  parse_request.html  schedule.html  sku_plan.html  sku_plan_stats_new.html  sku_plan_stats_old.html  (+2 more)
app/test/: a.py
app/utils/: boiling_plan_create.py  boiling_plan_draw.py  cast_schedule.py  directories.py  excel_client.py  excel_client2.py  flash_msgs.py  form.py  generate_constructor.py  generate_constructor_old.py  openpyxl_wrapper.py  parse_remainings.py  schedule.py  schedule_task.py  sku_plan.py
data/plan/: .~lock.plan_2020-11-12.ods#  .~lock.plan_2020-11-13.xlsx#  plan_2020-11-11.ods  plan_2020-11-11.xlsx  plan_2020-11-12.ods  plan_2020-11-12.xlsx  plan_2020-11-13.xlsx
db/: data.sqlite  fill_db.py  fill_db_test.py  init_db.bat  init_db.sh
db/batch_numbers/: batches.json  data.json  data2.json
db/migrations/: env.py
db/prod/: data.sqlite
db/test/: data.sqlite
deploy/: deploy_certificates.sh  deploy_packages.sh  umalat.conf
excel_img/: Dockerfile
input/: .~lock.request_060920.xlsx#  request_060920.ods  request_060920.xlsx
migrations/versions/: 063c1ab6c567_.py  08fddf4e445e_.py  0908b20114e4_.py  0b328c48c0e5_.py  0ee8af7446b3_.py  13d32511022b_.py  165caf333a2c_.py  1ec0a468d1c5_.py  26a3e7e405fe_.py  271109b6f6c8_.py  27cd21ea1d83_.py  2a962e47c235_.py  2e9a64b3d643_.py  2ff07240f8ad_.py  30ddf0fd8292_.py  337a649c60f0_.py  36187b3114be_.py  384b7ad7bd7d_.py  3931fa39575d_.py  3d9cfe9a02f4_.py  3df3c1416b36_.py  3fdb2dee25d0_.py  44aa46806538_.py  46ec20f85704_.py  47fc7ff7a476_.py  503ba18090ed_.py  55cad84fa985_.py  59a0ccbf323c_.py  5e5db68cbaa7_.py  6054262d01ff_.py  61cd69313034_.py  6906455c591e_.py  691c57cf5004_.py  (+55 more)
research/: .~lock.output.xlsx#  .~lock.params.xlsx#  .~lock.request.xlsx#  2020.10.06 draw_blocks.ipynb  2020.10.06 output.xlsx  2020.11.11 Algo.ipynb  2020.11.18 algo.py  Test.xlsx  Untitled.ipynb  create_sku.ipynb  create_worksheets_from_request.ipynb  example.json  output.xlsx  params.xlsx  parse_request.ipynb  template.xlsx  template_config.yaml
schedules/: schedule.xlsx  schedule_1.xlsx  schedule_2.xlsx  schedule_3.xlsx  schedule_4.xlsx
scripts/: build.sh  init_db.bat  init_db.sh  init_db_test.sh  init_dbs.sh  save_batches.sh  save_last_batches.sh  upload_batches.sh  upload_last_batches.sh
tests/: conftest.py  run_test.py  run_tests.py  test_imports.py
(+2056 files in other folders)
