[tool.poetry]
name = "umalat"
version = "1"
description = ""
authors = ["nkrokhmal <krokhmal11@mail.ru>"]

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma = "True"
lines_after_imports = 2
lines_between_types = 1
known_app = "lessmore"
combine_as_imports = "True"
known_first_party = []
sections = "FUTURE,STDLIB,THIRDPARTY,APP,FIRSTPARTY,LOCALFOLDER"


[tool.poetry.dependencies]
python = "^3.7.1"
Flask = "1.1.2"
Flask-Migrate = "2.5.3"
flask-restplus = "0.13.0"
flask-restx = "0.2.0"
Flask-Script = "2.0.6"
Flask-SQLAlchemy = "2.4.1"
SQLAlchemy = "1.3.16"
Werkzeug = "0.16.1"
WTForms = "2.2.1"
pycel = "1.0b22"
Flask-PageDown = "^0.3.0"
Flask-Bootstrap = "^3.3.7"
Flask-WTF = "^0.15.1"
Flask-Admin = "^1.5.8"
openpyxl = "3.0.6"
boto3 = "1.15.18"
GitPython = "3.1.9"
numpy = "1.19.2"
pandas = "1.1.3"
pymongo = "3.11.0"
bson = "0.5.10"
tqdm = "4.50.2"
pathlib = "1.0.1"
pyzmq = "19.0.2"
telegram = "0.0.1"
slacker = "0.14.0"
pyzmail36 = "1.0.4"
seaborn = "0.11.0"
paramiko = "2.7.2"
scp = "0.13.2"
pickleDB = "0.9.2"
Delorean = "1.0.0"
joblib = "0.17.0"
anyconfig = "0.9.11"
retrypy = "0.0.33"
requests-futures = "1.0.0"
empyrical = "0.5.5"
filelock = "3.0.12"
tenacity = "6.2.0"
msgpack = "1.0.2"
portion = "2.1.6"
PyYAML = "5.4.1"
pyperclip = "1.8.2"
xlrd = "1.2.0"
sortedcollections = "2.1.0"
loguru = "0.5.3"
stackprinter = "0.2.5"
mongoengine = "0.23.1"
flask-paginate = "0.8.1"
ujson = "4.0.2"
better-exceptions = "0.3.3"
icecream = "2.1.0"
kafka-python = "2.0.2"
notebook = "6.3.0"
notifiers = "1.2.1"
Flask-Login = "^0.5.0"
Flask-RQ2 = "^18.3"
pyTelegramBotAPI = "^3.8.1"
pydantic = "^1.8.2"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
