[tool.poetry]
name = "umalat"
version = "2.0.0"
description = ""
authors = ["nkrokhmal <krokhmal11@mail.ru>"]

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma = "True"
lines_after_imports = 2
lines_between_types = 1
known_app = "lessmore"
combine_as_imports = "True"
known_first_party = []
sections = "FUTURE,STDLIB,THIRDPARTY,APP,FIRSTPARTY,LOCALFOLDER"


[tool.poetry.dependencies]
# 3.12 fails for numpy install
python = ">=3.11,<3.12"
Flask = "2.3.2"
Flask-Admin = "1.6.1"
Flask-Bootstrap = "3.3.7.1"
Flask-Login = "0.6.2"
Flask-Migrate = "4.0.4"
Flask-PageDown = "0.4.0"
Flask-RQ2 = "18.3"
Flask-Script = "2.0.6"
Flask-SQLAlchemy = "3.0.5"
Flask-WTF = "1.1.1"
flask-paginate = "2022.1.8"
flask-restplus = "0.13.0"
flask-restx = "1.1.0"
Werkzeug = "^2.3.7"
WTForms = "^3.0.1"
SQLAlchemy = "^2.0.20"
pycel = "^1.0b30"
openpyxl = "^3.1.2"
boto3 = "^1.28.30"
GitPython = "^3.1.32"
numpy = "^1.25.2"
pandas = "^2.0.3"
pymongo = "^4.4.1"
bson = "^0.5.10"
tqdm = "^4.66.1"
pathlib = "^1.0.1"
pyzmq = "^25.1.1"
telegram = "^0.0.1"
slacker = "^0.14.0"
pyzmail36 = "^1.0.5"
seaborn = "^0.12.2"
paramiko = "^3.3.1"
scp = "^0.14.5"
pickleDB = "^0.9.2"
Delorean = "^1.0.0"
joblib = "^1.3.2"
anyconfig = "^0.13.0"
retrypy = "^0.0.33"
requests-futures = "^1.0.1"
empyrical = "^0.5.5"
filelock = "^3.12.2"
tenacity = "^8.2.3"
msgpack = "^1.0.5"
portion = "^2.4.1"
PyYAML = "^6.0.1"
pyperclip = "^1.8.2"
xlrd = "^2.0.1"
sortedcollections = "^2.1.0"
loguru = "^0.7.0"
stackprinter = "^0.2.10"
mongoengine = "^0.27.0"
ujson = "^5.8.0"
better-exceptions = "^0.3.3"
icecream = "^2.1.3"
kafka-python = "^2.0.2"
notebook = "^7.0.2"
notifiers = "^1.3.3"
pyTelegramBotAPI = "^4.12.0"
pydantic = "^2.2.1"
pytest = "^7.4.0"
more-itertools = "^10.1.0"
exceptiongroup = "1.1.3"
pendulum = "^2.1.2"
python-box = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
